--- a/web/style.css
+++ b/web/style.css
@@ -1,14 +1,34 @@
-:root{
+:root {
     --now_site: 0px;
+    display: flex;
+}
+body{
+    width: 100%;
+}
+
+#medias {
+    display: flex;
+    width: 100%;
+    height: 75%;
+}
+#video_data{
+    width: 75%;
+    height: 100%;
+}
+#map{
+    width: 25%;
+    height: 100%;
 }
 #AOA_div {
     display: flex;
     justify-content: flex-start;
     align-items: center;
     text-align: center;
-    width: 300px;
-    height: 150px; 
+    width: 35%; 
+    height: 25%; 
     overflow: hidden;
+    border-width: 9px; 
+    border-color: blue;
 }
 
 #speed {
