--- a/web/style.css
+++ b/web/style.css
@@ -2,8 +2,11 @@
     --now_site: 0px;
     display: flex;
 }
-body{
+body, html{
+    height: 100%;
     width: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 #medias {
@@ -12,46 +15,41 @@ body{
     height: 75%;
 }
 #video_data{
-    width: 75%;
+    width: 60%;
     height: 100%;
 }
 #map{
-    width: 25%;
+    width: 40%;
     height: 100%;
+}
+#digital_data{
+    display: flex;
+    width: 100%; 
+    height: 25%; 
+    overflow: hidden;
+    justify-content: center; 
 }
 #AOA_div {
     display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    text-align: center;
-    width: 35%; 
-    height: 25%; 
+    width: auto;
+    height: 100%;
     overflow: hidden;
-    border-width: 9px; 
-    border-color: blue;
+    align-items: center;
 }
-
 #speed {
     margin-left: 25px;
-    width: 100%;
-    height: 100%;
-    align-items: center;
-    text-align: center;
+    width: 300%;
+    height: 300%;
     transform: translate(0px, var(--now_site));
 }
 
 #roll {
-    margin-left: 20px;
-    width: 50%;
-    height: 50%;
-    align-items: center;
-    text-align: center;
+    width: 100%;
+    height: 100%;
+    margin-left: 10px;
 }
-
 #depression {
-    margin-left: -25px;
-    width: 110%;
-    height: 110%;
-    align-items: center;
-    text-align: center;
+    width: 300%;
+    height: 300%;
+
 }
