--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -18,7 +18,7 @@
         <div class="bar" id="digital_data">
             <div class="bar" id="AOA_div">
                 <img
-                    src="./imgs/speed.png"
+                    src="../static/imgs/speed.png"
                     alt="speed picture"
                     class="AOAsystem"
                     id="speed"
@@ -30,14 +30,14 @@
                     "
                 />
                 <img
-                src="./imgs/AOA1.png"
+                src="../static/imgs/AOA1.png"
                 alt="roll picture"
                 class="AOAsystem"
                 id="roll"
                 style="width: 100%; height: 100%; margin-left: 10px"
                 />
                 <img
-                src="./imgs/depression.png"
+                src="../static/imgs/depression.png"
                 alt="depression picture"
                 class="AOAsystem"
                 id="depression"
