--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -18,30 +18,24 @@
         <div class="bar" id="digital_data">
             <div class="bar" id="AOA_div">
                 <img
-                    src="../static/imgs/speed.png"
+                    src="{{ url_for('static', filename='imgs/speed.png') }}"
                     alt="speed picture"
                     class="AOAsystem"
                     id="speed"
-                    style="
-                    margin-left: 25px;
-                    width: 300%;
-                    height: 300%;
-                    transform: translate(0px, var(--now_site));
-                    "
+                    
                 />
                 <img
-                src="../static/imgs/AOA1.png"
-                alt="roll picture"
-                class="AOAsystem"
-                id="roll"
-                style="width: 100%; height: 100%; margin-left: 10px"
+                    src="{{ url_for('static', filename='imgs/AOA1.png') }}"
+                    alt="roll picture"
+                    class="AOAsystem"
+                    
                 />
                 <img
-                src="../static/imgs/depression.png"
-                alt="depression picture"
-                class="AOAsystem"
-                id="depression"
-                style="width: 300%; height: 300%"
+                    src="{{ url_for('static', filename='imgs/depression.png') }}"
+                    alt="depression picture"
+                    class="AOAsystem"
+                    id="depression"
+                    
                 />
             </div>
         </div>
