--- a/web/templates/style.css
+++ b/web/templates/style.css
@@ -2,12 +2,16 @@
   --now_site: 0px;
   display: flex;
 }
-body,
-html {
+body, html {
   height: 100%;
   width: 100%;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+*, *::before, *::after {
+  box-sizing: inherit;
 }
 
 #medias {
@@ -15,25 +19,38 @@ html {
   width: 100%;
   height: 75%;
 }
+
 #video_data {
   width: 60%;
   height: 100%;
 }
+
 #map {
   width: 40%;
   height: 100%;
 }
+
 #digital_data {
   display: flex;
   width: 100%;
   height: 25%;
-  overflow: hidden;
   justify-content: center;
+  overflow: hidden;
 }
+
 #AOA_div {
   display: flex;
-  width: auto;
   height: 100%;
-  overflow: hidden;
   align-items: center;
+}
+
+.AOAsystem {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+}
+
+#speed{
+  width: 25%;
+  height: 25%;
 }
