--- a/web/static/style.css
+++ b/web/static/style.css
@@ -2,7 +2,8 @@
   --now_site: 0px;
   display: flex;
 }
-body, html {
+body,
+html {
   height: 100%;
   width: 100%;
   margin: 0;
@@ -35,12 +36,14 @@ body, html {
   width: 100%;
   height: 25%;
   justify-content: center;
-  overflow: hidden;
+  align-items: center;
 }
 
-#AOA_div {
+.images-container {
   display: flex;
+  width: 25%;
   height: 100%;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -50,7 +53,7 @@ body, html {
   object-fit: cover;
 }
 
-#speed{
-  width: 25%;
-  height: 25%;
+.center {
+  margin-left: auto;
+  margin-right: auto;
 }
