--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,44 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>test</title>
-        <link rel="stylesheet" href="style.css" />
-    </head>
-    <body>
-        <div class="bar" id="medias">
-            <div id="videos" class="upsite">
-                <video id="video_data" autoplay></video>
-            </div>
-            <div id="map" class="upsite">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>test</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" /> <!-- 注意这里的样式表路径 -->
+</head>
+<body>
+    <div class="bar" id="medias">
+        <div id="videos" class="upsite">
+            <video id="video_data" autoplay></video>
+        </div>
+        <div id="map" class="upsite">
 
-            </div>
         </div>
-        <div class="bar" id="digital_data">
-            <div class="bar" id="AOA_div">
-                <img
-                    src="{{ url_for('static', filename='imgs/speed.png') }}"
-                    alt="speed picture"
-                    class="AOAsystem"
-                    id="speed"
-                    
-                />
-                <img
-                    src="{{ url_for('static', filename='imgs/AOA1.png') }}"
-                    alt="roll picture"
-                    class="AOAsystem"
-                    
-                />
-                <img
-                    src="{{ url_for('static', filename='imgs/depression.png') }}"
-                    alt="depression picture"
-                    class="AOAsystem"
-                    id="depression"
-                    
-                />
-            </div>
+    </div>
+    <div class="bar" id="digital_data">
+        <div id="images_container" class="images-container">
+            <img
+                src="{{ url_for('static', filename='imgs/speed.png') }}"
+                alt="speed picture"
+                class="AOAsystem"
+                id="speed"
+            />
+            <img
+                src="{{ url_for('static', filename='imgs/AOA1.png') }}"
+                alt="roll picture"
+                class="AOAsystem center"
+                id="roll"
+            />
+            <img
+                src="{{ url_for('static', filename='imgs/depression.png') }}"
+                alt="depression picture"
+                class="AOAsystem"
+                id="depression"
+            />
         </div>
-    <script src="script.js"></script>
-    </body>
+    </div>
+    <script src="{{ url_for('static', filename='script.js') }}"></script> <!-- 注意这里的脚本路径 -->
+</body>
 </html>
