--- a/web/static/style.css
+++ b/web/static/style.css
@@ -43,13 +43,13 @@ html {
   display: flex;
   width: 25%;
   height: 100%;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   align-items: center;
 }
 
 .AOAsystem {
   max-width: 100%;
-  max-height: 100%;
+  max-height: 75%;
   object-fit: cover;
 }
 
