--- a/web/static/style.css
+++ b/web/static/style.css
@@ -22,13 +22,23 @@ html {
 }
 
 #video_data {
-  width: 60%;
+  width: 100%;
   height: 100%;
+  background-color:rgb(174, 173, 173);
+  border-radius: 50px;
+  transform: scale(0.975);
 }
 
 #map {
   width: 40%;
   height: 100%;
+  background-color:rgb(174, 173, 173);
+  border-radius: 50px;
+  transform: scale(0.975);
+}
+
+.item{
+  flex: 1;
 }
 
 #digital_data {
@@ -40,6 +50,8 @@ html {
   background-color:rgb(174, 173, 173);
   border-radius: 50px;
   transform: scale(0.975);
+  justify-content: space-between;
+  padding: 0 10%;
 }
 
 .images-container {
@@ -59,4 +71,10 @@ html {
 .center {
   margin-left: auto;
   margin-right: auto;
+}
+
+#course{
+  display: flex;
+  overflow: hidden;
+
 }
