--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -11,7 +11,9 @@
 <body>
     <div class="bar" id="medias">
         <div id="videos" class="upsite">
-            <video id="video_data" autoplay></video>
+            <video id="video_data" width="640" height="480" autoplay>
+                <source src="http://192.168.0.106/" type="video/mp4">
+            </video>
         </div>
         <div id="map" class="upsite">
             <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap" async
