修改圖片位置

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -62,13 +62,17 @@
                 style = "
                     transform: scale(0.4);
                     position: absolute;
-                    top: 50px; left: 40px;
+                    right: 180px;
+                    bottom: 60px;
                 "
             />
             <img
                 src = "{{ url_for('static', filename='imgs/航向.png') }}" alt = "course photo" class="item" id="course_photo"
                 style = "
-                    width: 75%;
+                    width: 10%;
+                    position: absolute;
+                    right: 200px;
+                    bottom: 30px;
                 "
             />
         </div>
