--- a/web/static/style.css
+++ b/web/static/style.css
@@ -21,12 +21,23 @@ html {
   height: 75%;
 }
 
-#video_data {
+#videos {
   width: 100%;
   height: 100%;
   background-color:rgb(174, 173, 173);
   border-radius: 50px;
   transform: scale(0.975);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#stream{
+  width: auto;
+  height: auto;
+  background-color:rgb(174, 173, 173);
+  border-radius: 50px;
+  height: 100%;
+  transform: scale(auto);
 }
 
 #map {
@@ -76,4 +87,61 @@ html {
   display: flex;
   overflow: hidden;
 
+}
+/* 鏡頭按鈕設定 */
+#cam_btn{
+  background-color:rgb(103, 102, 102);
+  border-radius: 50px;
+  transform: scale(0.975);
+  display: flex;
+  width: 15%;
+  height: 100%;
+  flex-direction: column;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+  display: inline-block;
+  margin-left: 10%;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgb(174, 173, 173);
+  transition: .4s;
+  border-radius: 34px;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  transition: .4s;
+  border-radius: 50%;
+}
+
+.toggleSwitch:checked + .slider {
+  background-color: #2196F3;
+}
+
+.toggleSwitch:checked + .slider:before {
+  transform: translateX(26px);
 }
