--- a/web/static/style.css
+++ b/web/static/style.css
@@ -63,11 +63,12 @@ html {
   transform: scale(0.975);
   /* justify-content: space-between; */
   padding: 0 10%;
+  flex-direction: row;
 }
 
 .images-container {
   display: flex;
-  width: 25%;
+  width: 20%;
   height: 100%;
   align-items: center;
 }
@@ -94,9 +95,18 @@ html {
   border-radius: 50px;
   transform: scale(0.975);
   display: flex;
-  width: 15%;
-  height: 100%;
+  width: 20%;
+  height: 80%;
   flex-direction: column;
+}
+
+.btn_and_word {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2% 8%;
+  margin-top: 5%;
+  font-family: "Lucida Console";
 }
 
 .switch {
@@ -139,7 +149,7 @@ html {
 }
 
 .toggleSwitch:checked + .slider {
-  background-color: #2196F3;
+  background-color: #2aa54b;
 }
 
 .toggleSwitch:checked + .slider:before {
