--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="bar" id="medias">
         <div id="videos" class="upsite">
-            <!-- <img id="stream" src="http://192.168.0.106:81/stream" crossorigin="anonymous"> -->
+            <img id="stream" src="http://192.168.0.106:81/stream" crossorigin="anonymous">
         </div>
         <div id="map" class="upsite">
             <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap" async
@@ -55,24 +55,12 @@
                 " />
         </div>
         <div class = "bar" id = course>
-            <!-- <img
-                src = "{{ url_for('static', filename='imgs/plane_sign.png') }}" alt = "course photo" class="item" id="plane_sign" 
-                style = "
-                    transform: scale(0.4);
-                    position: absolute;
-                    right: 180px;
-                    bottom: 60px;
-                "
-            />
             <img
                 src = "{{ url_for('static', filename='imgs/航向.png') }}" alt = "course photo" class="item" id="course_photo"
                 style = "
                     width: 10%;
-                    position: absolute;
-                    right: 200px;
-                    bottom: 30px;
                 "
-            /> -->
+            />
         </div>
         <div class = "bar" id = cam_btn>
             <div class = "btn_and_word">
