--- a/web/static/style.css
+++ b/web/static/style.css
@@ -69,23 +69,31 @@ html {
 /* 時鐘 */
 #clock{
   display: flex;
-  width: 25%;
+  width: 20%;
   height: 80%;
   background-color:rgb(103, 102, 102);
   border-radius: 50px;
+  font-size: 24px;
+  font-family: Arial, sans-serif;
+  color: #333;
+  /* align-items: center; */
+  justify-content: center;
+  font-size: 500%;
+  padding: 20px;
 }
 
 /* HUD */
-.images-container {
+#system_container {
   display: flex;
   width: 20%;
   height: 100%;
   align-items: center;
+  object-fit: cover;
 }
 
 .AOAsystem {
-  max-width: 100%;
   max-height: 75%;
+  max-width: 20%;
   object-fit: cover;
 }
 
@@ -108,7 +116,7 @@ html {
   border-radius: 50px;
   transform: scale(0.975);
   display: flex;
-  width: 25%;
+  width: 20%;
   height: 80%;
   flex-direction: column;
   object-fit: contain;
