--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -39,7 +39,15 @@
     </div>
 
     <div class="bar" id="digital_data">
-        <div id = "clock"></div>
+        <div id = "clock_bar">
+            <div id = "clock"></div>
+
+            <div id = clock_btn_bar>
+                <button class = "clock_btn">紀錄開始</button>
+                <button class = "clock_btn">飛行紀錄</button>
+            </div>
+        </div>
+        
 
         <div id="system_container">
             <img src="{{ url_for('static', filename='imgs/speed.png') }}" alt="speed picture" class="AOAsystem item"
