--- a/web/static/style.css
+++ b/web/static/style.css
@@ -67,19 +67,41 @@ html {
 }
 
 /* 時鐘 */
-#clock{
+#clock_bar{
   display: flex;
   width: 20%;
   height: 80%;
+  flex-direction: column;
   background-color:rgb(103, 102, 102);
-  border-radius: 50px;
+  border-radius: 20px;
   font-size: 24px;
-  font-family: Arial, sans-serif;
-  color: #333;
-  /* align-items: center; */
+}
+
+#clock{
+  display: flex;
   justify-content: center;
-  font-size: 500%;
+  font-size: auto;
   padding: 20px;
+  font-family: Arial, sans-serif;
+  font-weight: 800;
+  color: rgb(174, 173, 173);
+  height: 40%;
+  width: auto;
+}
+
+#clock_btn_bar{
+  display:flex;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 60%;
+}
+.clock_btn{
+  height: 50%;
+  width: 40%;
+  border-radius: 20px;
+  background-color: rgb(174, 173, 173);
+  color: rgb(103, 102, 102);
+  font-weight: 800;
 }
 
 /* HUD */
