--- a/web/static/style.css
+++ b/web/static/style.css
@@ -25,7 +25,7 @@ html {
   width: 100%;
   height: 100%;
   background-color:rgb(174, 173, 173);
-  border-radius: 50px;
+  border-radius: 20px;
   transform: scale(0.975);
   display: flex;
   justify-content: center;
@@ -35,7 +35,7 @@ html {
   width: auto;
   height: auto;
   background-color:rgb(174, 173, 173);
-  border-radius: 50px;
+  border-radius: 20px;
   height: 100%;
   transform: scale(auto);
 }
@@ -44,7 +44,7 @@ html {
   width: 40%;
   height: 100%;
   background-color:rgb(174, 173, 173);
-  border-radius: 50px;
+  border-radius: 20px;
   transform: scale(0.975);
 }
 
@@ -59,7 +59,7 @@ html {
   justify-content: center;
   align-items: center;
   background-color:rgb(174, 173, 173);
-  border-radius: 50px;
+  border-radius: 20px;
   transform: scale(0.975);
   /* justify-content: space-between; */
   padding: 0 10%;
@@ -75,6 +75,7 @@ html {
   background-color:rgb(103, 102, 102);
   border-radius: 20px;
   font-size: 24px;
+  box-shadow: 0px 0px 2px 2px rgb(174, 173, 173);
 }
 
 #clock{
@@ -98,10 +99,18 @@ html {
 .clock_btn{
   height: 50%;
   width: 40%;
-  border-radius: 20px;
-  background-color: rgb(174, 173, 173);
-  color: rgb(103, 102, 102);
+  border-radius: 10px;
+  background-color: rgb(103, 102, 102);
+  color: rgb(174, 173, 173);
   font-weight: 800;
+  border:none;
+  box-shadow: 0px 0px 2px 2px rgb(174, 173, 173);
+}
+
+.clock_btn:hover {
+  background-color:rgb(174, 173, 173);
+  color: rgb(103, 102, 102);
+  transition: 0.5s;
 }
 
 /* HUD */
@@ -135,11 +144,11 @@ html {
 /* 鏡頭按鈕設定 */
 #cam_btn{
   background-color:rgb(103, 102, 102);
-  border-radius: 50px;
+  border-radius: 20px;
   transform: scale(0.975);
   display: flex;
   width: 20%;
-  height: 80%;
+  max-height: 80%;
   flex-direction: column;
   object-fit: contain;
 }
