--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -51,6 +51,10 @@
                 src = "{{ url_for('static', filename='imgs/temp_pic.png') }}" alt = "course photo" class="item" id="course_photo"
                 style = "
                     object-fit: contain;
+                    display: flex;
+                    width: 20%;
+                    height: 80%;
+                    overflow: hidden;
                 "
             />
 
