--- a/web/static/style.css
+++ b/web/static/style.css
@@ -18,7 +18,7 @@ html {
 #medias {
   display: flex;
   width: 100%;
-  height: 75%;
+  height: 70%;
 }
 
 #videos {
@@ -55,8 +55,8 @@ html {
 #digital_data {
   display: flex;
   width: 100%;
-  height: 25%;
-  justify-content: center;
+  height: 30%;
+  /* justify-content: space-evenly; */
   align-items: center;
   background-color:rgb(174, 173, 173);
   border-radius: 20px;
