新增按鈕作用

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -43,8 +43,8 @@
             <div id = "clock"></div>
 
             <div id = clock_btn_bar>
-                <button class = "clock_btn">紀錄開始</button>
-                <button class = "clock_btn">飛行紀錄</button>
+                <button class = "clock_btn" id = "recording">紀錄開始</button>
+                <button class = "clock_btn" id = "record">飛行紀錄</button>
             </div>
         </div>
         <img
