--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -116,6 +116,10 @@
         </div>
     </div>
 
+    <div id = "record_page">
+        <a>安安</a>
+    </div>
+</body>
     <script src="{{ url_for('static', filename='script.js') }}"></script>
 
 
