--- a/web/static/style.css
+++ b/web/static/style.css
@@ -90,6 +90,7 @@ html {
   width: auto;
 }
 
+/* 時鐘的按鈕 */
 #clock_btn_bar{
   display:flex;
   justify-content: space-evenly;
@@ -115,10 +116,11 @@ html {
 
 #record_page{
   background-color: #fefefe;
-  margin: 15% auto; /* 15% 從上方和自動水平對齊 */
+  margin: auto;
   padding: 20px;
   border: 1px solid #888;
-  width: 80%; /* 寬度 */
+  width: 75%;
+  height: 80%;
   z-index: 1;
 }
 
