--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -123,11 +123,16 @@
                 <option>Goldfish</option>
             </select>
         </div>
-        <div style="display: flex; justify-content: space-between;">
-            <div id = "float_map">
-                <p>123</p>
-            </div>
+        <div style="display: flex; align-items: center; flex-direction: row;">
             <div id = "float_data">
+                <p>TIME</p>
+                <p>COURSE</p>
+                <p>DEPRESSION</p>
+                <P>PRESSURE ALTITUDE</P>
+                <p>RELATIVE ALTITUDE</p>
+                <p>COORDINATE</p>
+            </div>
+            <div id = "float_map">
                 <p>123</p>
             </div>
         </div>
