文字檔建立
原本flask的名稱怪怪的
改成app.py
scipt和app小修
若是成功呼叫到函示就會alert
是chatgpt給我的
還有很多地方需要修改
而且依樣文字檔無法被建立

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -35,7 +35,7 @@
             <div id = "clock"></div>
 
             <div id = clock_btn_bar>
-                <button class = "clock_btn" id = "recording">紀錄開始</button>
+                <button class = "clock_btn" id = "recording">開始記錄</button>
                 <button class = "clock_btn" id = "record">飛行紀錄</button>
             </div>
         </div>
