--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -112,15 +112,8 @@
         <div id="modal-content">
             <span id = "close">×</span>
             <p>這是記錄頁面的彈出視窗！</p>
-            <input type="date">
             <select>
-                <option>請選擇你最愛的寵物</option>
-                <option>Dog</option>
-                <option>Cat</option>
-                <option>Hamster</option>
-                <option>Parrot</option>
-                <option>Spider</option>
-                <option>Goldfish</option>
+                <option value="">請選擇檔案</option>
             </select>
         </div>
         <div style="display: flex; justify-content: space-between; width: 100%; height: 75%;">
