--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -39,7 +39,7 @@
                 <button class = "clock_btn" id = "record">飛行紀錄</button>
             </div>
         </div>
-        <img
+        <!-- <img
                 src = "{{ url_for('static', filename='imgs/temp_pic.png') }}" alt = "course photo" class="item" id="course_photo"
                 style = "
                     object-fit: contain;
@@ -48,7 +48,10 @@
                     height: 80%;
                     overflow: hidden;
                 "
-            />
+            /> -->
+        <div id = autitude_bar>
+            
+        </div>
 
         <div id="system_container">
             <img src="{{ url_for('static', filename='imgs/speed.png') }}" alt="speed picture" class="AOAsystem item"
